# GOST

./: .gitattributes  .gitignore  .rclocignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  commenting-guidelines.md  gs.cmd  test.gs  timer_1m_worst.gs  timer_200k.gs
docs/: README.md  cli-reference.md  compiler-architecture.md  concurrency-ownership-practice.md  diagnostics.md  ffi-guide.md  getting-started.md  gost-by-example.md  index.md  intrinsics-reference.md  language-guide.md  language-reference.md  modules-and-packages.md  owner_alias_model.md  ownership-cheatsheet.md  package-lock.json  package.json  stdlib-reference.md  testing-guide.md
runtime/: Cargo.toml  build.rs  gostctx_arm64.asm  gostctx_arm64_macos.asm  gostctx_x86_64_macos.asm  gostctx_x86_64_sysv.asm  gostctx_x86_64_win.asm  gostrt.c  gostrt.h  gostrt.toolchain
runtime/src/: lib.rs
samples/: chan.gs  hello.gs  hello.ll  select.gs
scripts/: check_codegen_reject_strings.ps1  check_string_cmp_codegen.ps1  codegen_reject_strings.baseline  setup-toolchain.ps1
src/: abi.rs  compile.rs  incremental.rs  intrinsics.rs  lib.rs  main.rs
test/: array_bounds_error.gs  array_literal_test  array_literal_test.gs  asm_colon_compile_test.gs  asm_colon_output_compile_test  asm_colon_output_compile_test.gs  asm_extended_compile_test  asm_extended_compile_test.gs  asm_goto_compile_test.gs  asm_goto_named_label_compile_test.gs  asm_named_operand_compile_test  asm_named_operand_compile_test.gs  backend_goroutine_stress  backend_goroutine_stress.gs  backend_goroutine_stress_w1  backend_test  can_recv_test  (+232 more)
(+77 files in other folders)
